Internal: Add tracking to all resource event - refs #6134

--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -108,7 +108,9 @@ services:
 
     Chamilo\CoreBundle\EventListener\MessageStatusListener: ~
 
-    Chamilo\CoreBundle\EventListener\ResourceLinkListener: ~
+    Chamilo\CoreBundle\Entity\Listener\ResourceLinkListener:
+      tags:
+        - { name: doctrine.orm.entity_listener, entity_manager: default, lazy: true }
 
     Chamilo\CoreBundle\EventListener\UserRelCourseVoteListener:
       tags:
