Internal: fix bug that prevent display last user connection - refs #6105

--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -20,6 +20,11 @@ services:
       tags:
         - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
 
+    # Log last user connection listener
+    Chamilo\CoreBundle\EventListener\OnlineListener:
+        tags:
+            - {name: kernel.event_listener, event: kernel.controller, method: onKernelController}
+
 
   # Sets the user access in a course session listener
     Chamilo\CoreBundle\EventListener\SessionAccessListener:
