Internal: Fix missing EntityManager injection in AttendanceCalendarRepository

--- a/src/CoreBundle/Resources/config/services.yml
+++ b/src/CoreBundle/Resources/config/services.yml
@@ -127,3 +127,8 @@ services:
       class: Chamilo\CoreBundle\GraphQL\LoggingExecutor
       arguments:
         $logger: '@logger'
+
+    Chamilo\CourseBundle\Repository\CAttendanceCalendarRepository:
+      arguments:
+        $registry: '@doctrine'
+        $em: '@doctrine.orm.entity_manager'
