Internal: Add default error page for undefined URL in multi-URL - refs #6297

--- a/src/CoreBundle/Resources/config/services.yml
+++ b/src/CoreBundle/Resources/config/services.yml
@@ -138,3 +138,7 @@ services:
         $parameterBag: '@parameter_bag'
         $pluginRepo: '@Chamilo\CoreBundle\Repository\AccessUrlRelPluginRepository'
         $accessUrlHelper: '@Chamilo\CoreBundle\ServiceHelper\AccessUrlHelper'
+
+    Chamilo\CoreBundle\EventListener\AccessUrlValidationListener:
+      tags:
+        - { name: kernel.event_listener, event: kernel.request, priority: 255 }
