CI: Force use of PHP 7.4 in automated tests building sequence

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -69,7 +69,7 @@ jobs:
                   restore-keys: v1-${{ runner.os }}-composer-
 
             - name: Install dependencies with composer
-              run: composer install --prefer-dist --no-progress
+              run: php7.4 /usr/local/bin/composer install --prefer-dist --no-progress
 
 #            - name: Install assets
 #              run: php bin/console assets:install
