--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -181,16 +181,16 @@ jobs:
                   git clone https://github.com/chamilo/chash
                   cd chash
                   git checkout 0.2.x
-                  composer install
-                  php -d phar.readonly=0 createPhar.php
+                  php7.4 /usr/local/bin/composer install
+                  php7.4 -d phar.readonly=0 createPhar.php
                   chmod +x chash.phar
                   sudo mv chash.phar /usr/local/bin/chash
 
             - name: Install chamilo
               run: |
-                  php ${{ github.workspace }}/chash/chash.php chash:chamilo_install 1.11.x ${{ github.workspace }} --no-interaction --sitename="Chamilo" --site_url="http://localhost/" --institution="Chamilo" --institution_url="https://chamilo.org" --encrypt_method="sha1" --firstname="John" --lastname="Doe" --language="english" --driver="pdo_mysql" --host="localhost" --port="3306" --dbname="chamilo" --dbuser="root" --dbpassword="root" --permissions_for_new_directories="0777" --permissions_for_new_files="0666" --linux-user="www-data" --linux-group="www-data" --username="admin" --password="admin" --email="admin@example.com" --phone="555-5555"
+                  php7.4 ${{ github.workspace }}/chash/chash.php chash:chamilo_install 1.11.x ${{ github.workspace }} --no-interaction --sitename="Chamilo" --site_url="http://localhost/" --institution="Chamilo" --institution_url="https://chamilo.org" --encrypt_method="sha1" --firstname="John" --lastname="Doe" --language="english" --driver="pdo_mysql" --host="localhost" --port="3306" --dbname="chamilo" --dbuser="root" --dbpassword="root" --permissions_for_new_directories="0777" --permissions_for_new_files="0666" --linux-user="www-data" --linux-group="www-data" --username="admin" --password="admin" --email="admin@example.com" --phone="555-5555"
                   sudo chmod -R 777 app/cache app/logs app/courses app/upload web
-                  php ${{ github.workspace }}/chash/chash.php chash:chamilo_status
+                  php7.4 ${{ github.workspace }}/chash/chash.php chash:chamilo_status
                   ls -la
                   bash tests/travis/post_installation.sh
                   curl http://localhost/index.php
