--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -192,11 +192,17 @@ jobs:
                   sudo chmod -R 777 app/cache app/logs app/courses app/upload web
                   php7.4 ${{ github.workspace }}/chash/chash.php chash:chamilo_status
                   bash tests/travis/post_installation.sh
+                  echo "Working directory:"
                   pwd
                   ls -la
-                  ls -l /etc/apache2/sites-enabled                
-                  curl http://localhost/index.php
+                  echo "Active Apache config:"
+                  ls -l /etc/apache2/sites-enabled
+                  cat /etc/apache2/sites-enabled/000-default.conf
+                  echo "web and web/build contents:"
+                  ls -la web
                   ls -la web/build
+                  sudo systemctl restart apache2
+                  curl http://localhost/
 
             - name: Behat tests
               run: |
