--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,7 @@
         "maennchen/zipstream-php": "^2.1",
         "masterminds/html5": "^2.0",
         "michelf/php-markdown": "~1.8",
+        "minishlink/web-push": "^9.0",
         "mpdf/mpdf": "~8.0",
         "nelexa/zip": "^4.0",
         "nelmio/cors-bundle": "^2.2",
