--- a/.env.dist
+++ b/.env.dist
@@ -43,7 +43,20 @@ APP_ENABLE_API_ENTRYPOINT=false
 ###< chamilo ###
 
 ###> symfony/mailer ###
-MAILER_DSN=sendmail://default
+MAILER='{{MAILER}}'
+SMTP_HOST='{{SMTP_HOST}}'
+SMTP_PORT='{{SMTP_PORT}}'
+SMTP_AUTH='{{SMTP_AUTH}}'
+SMTP_USER='{{SMTP_USER}}'
+SMTP_PASS='{{SMTP_PASS}}'
+SMTP_SECURE='{{SMTP_SECURE}}'
+SMTP_CHARSET='{{SMTP_CHARSET}}'
+SMTP_UNIQUE_REPLY_TO='{{SMTP_UNIQUE_REPLY_TO}}'
+SMTP_DEBUG='{{SMTP_DEBUG}}'
+
+MAILER_DSN='{{MAILER_DSN}}'
+MAILER_FROM_EMAIL='{{MAILER_FROM_EMAIL}}'
+MAILER_FROM_NAME='{{MAILER_FROM_NAME}}'
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
