Auth: Fix Azure registration by Microsoft Graph

--- a/config/authentication.dist.yaml
+++ b/config/authentication.dist.yaml
@@ -49,3 +49,4 @@ parameters:
                     title: 'Azure'
                     client_id: ''
                     client_secret: ''
+                    url_api: 'https://graph.microsoft.com'
