--- a/package.json
+++ b/package.json
@@ -18,37 +18,36 @@
     "@fullcalendar/vue3": "^5.11.5",
     "@maxgraph/core": "^0.15.1",
     "@tinymce/tinymce-vue": "^5.1.1",
-    "@types/lodash": "^4.17.16",
-    "@uppy/audio": "^2.1.2",
-    "@uppy/core": "^4.4.4",
-    "@uppy/dashboard": "^4.3.3",
-    "@uppy/drag-drop": "^4.1.2",
-    "@uppy/file-input": "^4.1.2",
-    "@uppy/image-editor": "^3.3.2",
-    "@uppy/locales": "^4.5.2",
+    "@types/lodash": "^4.17.20",
+    "@uppy/audio": "^2.1.3",
+    "@uppy/core": "^4.4.7",
+    "@uppy/dashboard": "^4.3.4",
+    "@uppy/drag-drop": "^4.1.3",
+    "@uppy/file-input": "^4.1.3",
+    "@uppy/image-editor": "^3.3.3",
+    "@uppy/locales": "^4.6.0",
     "@uppy/progress-bar": "^4.2.1",
-    "@uppy/vue": "^2.1.1",
-    "@uppy/webcam": "^4.1.2",
+    "@uppy/vue": "^2.3.0",
+    "@uppy/webcam": "^4.2.1",
     "@uppy/xhr-upload": "^4.3.3",
     "@vue/apollo-composable": "^4.2.2",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "alpinejs": "^3.14.9",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "blueimp-file-upload": "^10.32.0",
     "blueimp-load-image": "^5.16.0",
     "bootstrap-daterangepicker": "^3.1.0",
     "bootstrap-select": "^1.13.18",
-    "chart.js": "^4.0.0",
+    "chart.js": "^4.5.0",
     "colorjs.io": "^0.5.2",
     "cropper": "^4.1.0",
     "d3": "^7.9.0",
     "datepair.js": "^0.4.17",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "dropzone": "^5.9.3",
     "easy-pie-chart": "^2.1.7",
     "easytimer.js": "^1.3.2",
-    "eslint-plugin-prettier": "^5.4.0",
     "flag-icons": "^6.15.0",
     "free-jqgrid": "https://github.com/chamilo/jqGrid.git#commit=725be74a7ea9d3acc896b68b11b0fbdb36105df3",
     "full-icu": "^1.5.0",
@@ -78,11 +77,11 @@
     "moment": "^2.30.1",
     "multiselect-two-sides": "^2.5.7",
     "path": "^0.12.7",
-    "pinia": "^3.0.2",
+    "pinia": "^3.0.3",
     "pretty-bytes": "^5.6.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primevue": "^4.3.3",
+    "primevue": "^4.3.6",
     "pwstrength-bootstrap": "3.1.3",
     "qtip2": "3.0.3",
     "readmore-js": "^2.2.1",
@@ -90,15 +89,15 @@
     "select2": "^4.1.0-rc.0",
     "signature_pad": "^3.0.0-beta.4",
     "sortablejs": "^1.15.6",
-    "sweetalert2": "^11.21.0",
+    "sweetalert2": "^11.22.2",
     "textcomplete": "^0.18.2",
     "timeago": "^1.6.7",
     "timepicker": "^1.14.1",
     "tinymce": "^5.10.9",
     "video.js": "^7.21.7",
     "vue-flatpickr-component": "^9.0.8",
-    "vue-i18n": "10.0.7",
-    "vue-multiselect": "^3.0.0-beta.2",
+    "vue-i18n": "10.0.8",
+    "vue-multiselect": "^3.2.0",
     "vue-perfect-scrollbar": "^0.2.1",
     "vue-router": "4.5.1",
     "vue-toastification": "^2.0.0-rc.5",
@@ -107,41 +106,42 @@
     "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.1",
-    "@babel/preset-env": "^7.27.1",
-    "@eslint/js": "^9.26.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@eslint/js": "^9.31.0",
     "@mdi/font": "^7.4.47",
     "@symfony/webpack-encore": "^5.1.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3": "^7.4.3",
-    "@vue/compiler-sfc": "^3.5.13",
+    "@vue/compiler-sfc": "^3.5.17",
     "autoprefixer": "^10.4.21",
-    "core-js": "3.42.0",
+    "core-js": "3.44.0",
     "deepmerge": "^4.3.1",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-vue": "^10.1.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-vue": "^10.3.0",
     "file-loader": "^6.2.0",
     "globals": "^15.15.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
     "postcss-prefix-selector": "^2.1.1",
-    "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "purgecss-webpack-plugin": "^7.0.2",
-    "sass": "^1.87.0",
+    "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "tailwindcss": "^3.4.17",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
-    "vue": "^3.5.13",
-    "vue-eslint-parser": "^10.1.3",
+    "vue": "^3.5.17",
+    "vue-eslint-parser": "^10.2.0",
     "vue-loader": "^17.4.2",
-    "webpack": "^5.99.7",
+    "webpack": "^5.100.2",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1",
+    "webpack-dev-server": "^5.2.2",
     "webpack-notifier": "^1.15.0"
   },
   "resolutions": {
