Internal: Add basic config to use Azure Storage as a filesystem

--- a/.env.dist
+++ b/.env.dist
@@ -87,6 +87,19 @@ PACKAGER='{{PACKAGER}}'
 DEFAULT_TEMPLATE='{{DEFAULT_TEMPLATE}}'
 ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE='{{ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE}}'
 
+###> azure blob storage as filesystem ###
+# AZURE_STORAGE_CONNECTION_STRING='DefaultEndpointsProtocol=https;AccountName=azurechamilo;AccountKey=ACCOUNTKEY==;EndpointSuffix=core.windows.net'
+# AZURE_STORAGE_ASSET_CONTAINER='asset-container-name'
+# AZURE_STORAGE_ASSET_PREFIX='optional/prefix'
+# AZURE_STORAGE_ASSET_CACHE_CONTAINER='asset-cache-container-name'
+# AZURE_STORAGE_ASSET_CACHE_PREFIX='optional/prefix'
+# AZURE_STORAGE_RESOURCE_CONTAINER='resources-container-name'
+# AZURE_STORAGE_RESOURCE_PREFIX='optional/prefix'
+# AZURE_STORAGE_RESOURCE_CACHE_CONTAINER='resources-cache-container-name'
+# AZURE_STORAGE_RESOURCE_CACHE_PREFIX='optional/prefix'
+# AZURE_STORAGE_THEMES_CONTAINER='themes-container-name'
+# AZURE_STORAGE_THEMES_PREFIX='optional/prefix'
+###< azure blob storage as filesystem ###
 ###> google cloud storage as filesystem ###
 # GOOGLE_STORAGE_CLOUD_PROJECT_ID=''
 # GOOGLE_STORAGE_KEY_FILE_PATH=%kernel.project_dir%/config/storage_keys/project-id-12345678.json
