Internal: Add basic config to use AWS S3 as a filesystem

--- a/.env.dist
+++ b/.env.dist
@@ -100,6 +100,24 @@ ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE='{{ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE}}'
 # AZURE_STORAGE_THEMES_CONTAINER='themes-container-name'
 # AZURE_STORAGE_THEMES_PREFIX='optional/prefix'
 ###< azure blob storage as filesystem ###
+
+###> aws s3 storage as filesystem ###
+# AWS_S3_STORAGE_VERSION='latest'
+# AWS_S3_STORAGE_REGION='region-id' # 'eu-central-1' for example
+# AWS_S3_STORAGE_ACCESS_KEY='s3-key'
+# AWS_S3_STORAGE_ACCESS_SECRET='s3-secret'
+# AWS_S3_STORAGE_ASSET_BUCKET='assets-bucket-name'
+# AWS_S3_STORAGE_ASSET_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+# AWS_S3_STORAGE_ASSET_CACHE_BUCKET='asset-cache-bucket-name'
+# AWS_S3_STORAGE_ASSET_CACHE_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+# AWS_S3_STORAGE_RESOURCE_BUCKET='resources-bucket-name'
+# AWS_S3_STORAGE_RESOURCE_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+# AWS_S3_STORAGE_RESOURCE_CACHE_BUCKET='resource-cache-bucket-name'
+# AWS_S3_STORAGE_RESOURCE_CACHE_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+# AWS_S3_STORAGE_THEMES_BUCKET='themes-bucket-name'
+# AWS_S3_STORAGE_THEMES_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+###< aws s3 storage as filesystem ###
+
 ###> google cloud storage as filesystem ###
 # GOOGLE_STORAGE_CLOUD_PROJECT_ID=''
 # GOOGLE_STORAGE_KEY_FILE_PATH=%kernel.project_dir%/config/storage_keys/project-id-12345678.json
