--- a/config/services.yaml
+++ b/config/services.yaml
@@ -133,6 +133,18 @@ services:
         arguments:
             $pluginDir: '%kernel.project_dir%/public/plugin'
 
+    League\Flysystem\AwsS3V3\PortableVisibilityConverter: ~
+
+    chamilo.storage.awss3_client:
+        class: Aws\S3\S3Client
+        arguments:
+            -
+                version: '%env(AWS_S3_STORAGE_VERSION)%'
+                region: '%env(AWS_S3_STORAGE_REGION)%'
+                credentials:
+                    key: '%env(AWS_S3_STORAGE_ACCESS_KEY)%'
+                    secret: '%env(AWS_S3_STORAGE_ACCESS_SECRET)%'
+
     Google\Cloud\Storage\StorageClient:
         arguments:
             $config:
