--- a/.env.dist
+++ b/.env.dist
@@ -86,3 +86,49 @@ THEME_FALLBACK='{{THEME_FALLBACK}}'
 PACKAGER='{{PACKAGER}}'
 DEFAULT_TEMPLATE='{{DEFAULT_TEMPLATE}}'
 ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE='{{ADMIN_CHAMILO_ANNOUNCEMENTS_DISABLE}}'
+
+###> azure blob storage as filesystem ###
+# AZURE_STORAGE_CONNECTION_STRING='DefaultEndpointsProtocol=https;AccountName=azurechamilo;AccountKey=ACCOUNTKEY==;EndpointSuffix=core.windows.net'
+# AZURE_STORAGE_ASSET_CONTAINER='asset-container-name'
+# AZURE_STORAGE_ASSET_PREFIX='optional/prefix'
+# AZURE_STORAGE_ASSET_CACHE_CONTAINER='asset-cache-container-name'
+# AZURE_STORAGE_ASSET_CACHE_PREFIX='optional/prefix'
+# AZURE_STORAGE_RESOURCE_CONTAINER='resources-container-name'
+# AZURE_STORAGE_RESOURCE_PREFIX='optional/prefix'
+# AZURE_STORAGE_RESOURCE_CACHE_CONTAINER='resources-cache-container-name'
+# AZURE_STORAGE_RESOURCE_CACHE_PREFIX='optional/prefix'
+# AZURE_STORAGE_THEMES_CONTAINER='themes-container-name'
+# AZURE_STORAGE_THEMES_PREFIX='optional/prefix'
+###< azure blob storage as filesystem ###
+
+###> aws s3 storage as filesystem ###
+# AWS_S3_STORAGE_VERSION='latest'
+# AWS_S3_STORAGE_REGION='region-id' # 'eu-central-1' for example
+# AWS_S3_STORAGE_ACCESS_KEY='s3-key'
+# AWS_S3_STORAGE_ACCESS_SECRET='s3-secret'
+# AWS_S3_STORAGE_ASSET_BUCKET='assets-bucket-name'
+# AWS_S3_STORAGE_ASSET_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+# AWS_S3_STORAGE_ASSET_CACHE_BUCKET='asset-cache-bucket-name'
+# AWS_S3_STORAGE_ASSET_CACHE_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+# AWS_S3_STORAGE_RESOURCE_BUCKET='resources-bucket-name'
+# AWS_S3_STORAGE_RESOURCE_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+# AWS_S3_STORAGE_RESOURCE_CACHE_BUCKET='resource-cache-bucket-name'
+# AWS_S3_STORAGE_RESOURCE_CACHE_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+# AWS_S3_STORAGE_THEMES_BUCKET='themes-bucket-name'
+# AWS_S3_STORAGE_THEMES_PREFIX='path/prefix' # Optional path prefix, you can set empty string
+###< aws s3 storage as filesystem ###
+
+###> google cloud storage as filesystem ###
+# GOOGLE_STORAGE_CLOUD_PROJECT_ID=''
+# GOOGLE_STORAGE_KEY_FILE_PATH=%kernel.project_dir%/config/storage_keys/project-id-12345678.json
+# GOOGLE_STORAGE_ASSET_BUCKET='assets-bucket-name'
+# GOOGLE_STORAGE_ASSET_PREFIX=''
+# GOOGLE_STORAGE_ASSET_CACHE_BUCKET='assets-cache-bucket-name'
+# GOOGLE_STORAGE_ASSET_CACHE_PREFIX=''
+# GOOGLE_STORAGE_RESOURCE_BUCKET='resources-bucket-name'
+# GOOGLE_STORAGE_RESOURCE_PREFIX=''
+# GOOGLE_STORAGE_RESOURCE_CACHE_BUCKET='resources-cache-bucket-name'
+# GOOGLE_STORAGE_RESOURCE_CACHE_PREFIX=''
+# GOOGLE_STORAGE_THEMES_BUCKET='themes-bucket-name'
+# GOOGLE_STORAGE_THEMES_PREFIX=''
+###< google cloud storage as filesystem ###
