ajout du fichier composer.lock dans gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ app/logs/*
 /app/config/mail.conf.php
 /app/config/profile.conf.php
 /app/config/configuration.php
+composer.lock
 
 # Courses
 app/courses/*
