Internal: set default value for MAILER_DSN variable #6477

--- a/.env.dist
+++ b/.env.dist
@@ -43,7 +43,7 @@ APP_ENABLE_API_ENTRYPOINT=false
 ###< chamilo ###
 
 ###> symfony/mailer ###
-MAILER_DSN='{{MAILER_DSN}}'
+# MAILER_DSN='null://null'
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
