--- a/src/CoreBundle/Resources/config/settings.yml
+++ b/src/CoreBundle/Resources/config/settings.yml
@@ -193,3 +193,8 @@ services:
       class: Chamilo\CoreBundle\Settings\AiHelpersSettingsSchema
       tags:
         - { name: sylius.settings_schema, alias: chamilo_core.settings.ai_helpers, namespace: ai_helpers }
+
+    chamilo_core.settings.catalog:
+      class: Chamilo\CoreBundle\Settings\CatalogSettingsSchema
+      tags:
+        - { name: sylius.settings_schema, alias: chamilo_core.settings.catalog, namespace: catalog }
