--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -6,6 +6,7 @@ nelmio_cors:
         allow_headers: ['Content-Type', 'Authorization', 'Preload', 'Fields']
         expose_headers: ['Link']
         max_age: 3600
+        allow_credentials: true
     paths:
         '^/login/token/check':
             allow_credentials: true
