Set Access-Control-Allow-Credentials header for login_token_check route only - refs BT#22639

--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -7,4 +7,6 @@ nelmio_cors:
         expose_headers: ['Link']
         max_age: 3600
     paths:
+        '^/login/token/check':
+            allow_credentials: true
         '^/': null
