--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -115,11 +115,13 @@ security:
                 # password_path: security.credentials.password
 
             custom_authenticators:
+                - Chamilo\CoreBundle\Security\Authenticator\LoginTokenAuthenticator
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\GenericAuthenticator
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\FacebookAuthenticator
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\KeycloakAuthenticator
                 - Chamilo\CoreBundle\Security\Authenticator\OAuth2\AzureAuthenticator
 
     access_control:
+        - { path: ^/login/token/check, roles: PUBLIC_ACCESS }
         - {path: ^/login, roles: PUBLIC_ACCESS}
         - {path: ^/api/authentication_token, roles: PUBLIC_ACCESS}
