--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         "a2lix/translation-form-bundle": "^3.0",
         "api-platform/core": "^3.0",
         "beberlei/doctrineextensions": "^1.3",
+        "bigbluebutton/bigbluebutton-api-php": "^2.0",
         "chamilo/google-map-form-type-bundle": "1.7",
         "chamilo/settings-bundle": "1.3.0",
         "clue/graph": "^0.9.2",
