--- a/src/CoreBundle/Resources/config/listeners.yml
+++ b/src/CoreBundle/Resources/config/listeners.yml
@@ -106,6 +106,10 @@ services:
         tags:
             - { name: doctrine.orm.entity_listener, entity_manager: default, lazy: true }
 
+    Chamilo\CoreBundle\Entity\Listener\AccessUrlListener:
+        tags:
+            - { name: doctrine.orm.entity_listener, entity_manager: default, lazy: true }
+
     Chamilo\CoreBundle\EventListener\MessageStatusListener: ~
 
     Chamilo\CoreBundle\Entity\Listener\ResourceLinkListener:
